redhatcore-app/main/default/objects/Limit_Reserve__mdt/Limit_Reserve__mdt.object-meta.xml
<CustomObject>
    <description>This is metadata for reserving time for processing records, used by the Limit Helper class.</description>
    <label>Limit Reserve</label>
    <pluralLabel>Limit Reserves</pluralLabel>
</CustomObject>