redhatcore-app/main/default/objects/Limit_Reserve__mdt/fields/cpuTime__c.field-meta.xml
<CustomField>
    <fullName>cpuTime__c</fullName>
    <defaultValue>10</defaultValue>
    <description>How much time in ms to reserve?</description>
    <inlineHelpText>How much time in ms to reserve?</inlineHelpText>
    <label>cpuTime</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>