redhatcore-app/main/default/objects/Limit_Reserve__mdt/fields/dmlRows__c.field-meta.xml
<CustomField>
    <fullName>dmlRows__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many dml rows need to be reserved.</description>
    <label>dmlRows</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>