redhatcore-app/main/default/objects/Limit_Reserve__mdt/fields/dmlStatements__c.field-meta.xml
<CustomField>
    <fullName>dmlStatements__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many dml statements do we need to reserve?</description>
    <inlineHelpText>How many dml statements do we need to reserve?</inlineHelpText>
    <label>dmlStatements</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>