redhatcore-app/main/default/objects/Limit_Reserve__mdt/fields/queries__c.field-meta.xml
<CustomField>
    <fullName>queries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many queries need to be reserved?</description>
    <inlineHelpText>How many queries need to be reserved?</inlineHelpText>
    <label>queries</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>